major changes - dark mode by default -added more options in the nav section and is more clean - the image of user profile on the bottom of the nav is fixed - border is changed to dark -twitter logo changed to x - the hover color on post changed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+
+    *,
+    ::before,
+    ::after {
+        @apply dark:border-[#242424];
+    }
+}
